# C99-Utility-Libraries

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  LICENSE-MIT  annotated.html  annotated_dup.js  arguments_2structs_8h.html  arguments_2structs_8h.js  arguments_2structs_8h_source.html  arguments_8c.html  arguments_8c.js  arguments_8h.html  arguments_8h.js  arguments_8h_source.html  build-clean.bat  build-doc.bat  build-msvc-internal.cmd  build-msvc.cmd  build-reactos-win32-jom.cmd  build-reactos-win32-manual.cmd  build-reactos-win32-msvc.cmd  build-reactos.bat  build.cmd  classes.html  commons_8c.html  commons_8c.js  commons_8h.html  commons_8h.js  commons_8h_source.html  crc32_8c.html  crc32_8c.js  crc32_8h.html  crc32_8h.js  crc32_8h_source.html  debug_8h.html  debug_8h.js  debug_8h_source.html  definitions.md  dir_13a41d9ad64fb9ae396cb953294783cf.html  (+174 more)
.github/workflows/: cmake-tests.yml  gh-pages.yml
benchmarks/: bm_asm_shifts_x86.pb  bm_crc32_implementations.c  bm_crc32_implementations.csv  bm_powers_of_two.c  bm_square_of_two_mask.c  notes.md  readme.md
docs/: Doxyfile
docs/pages/: home.md
examples/: arguments_basic.c  crc32.c  crc32_flat-ish_distribution.pb  debug_logging.c  dllist_basic.c  dllist_custom_free.c  dllist_custom_node.c  dllist_specific.c  hashmap_chained_basic.c  text_unicode_macro.c  uuid_all.c  uuid_win32.c
extra/: asm_x86_shifts.pb  crc32_distribution_alphabet.csv  crc32_distribution_alphabet.pb  crc32_distribution_alphabet.r  crc32_distribution_random.csv  crc32_distribution_random.r  crc32_flat-ish_distribution.csv  crc32_flat-ish_distribution.pb  crc32_flat-ish_distribution.r  dependency-graph.drawio
msvcrt/: 0_clean.cmd  0_config.cmd  1_dump_exp.cmd  2_convert_exp_to_def.cmd  3_make_lib.cmd  exp_to_def.py  main.cmakesilencer.c
msvcrt/headers/: stdio.h  wchar.h
msvcrt/libs/arm64/win11-24h2-pro_azure/SyChpe32/: msvcrt.def
msvcrt/libs/arm64/win11-24h2-pro_azure/WinSxS_arm64/: msvcrt.def
msvcrt/libs/x64/win11-23h2-pro_msdn-iso/System32/: msvcrt.def
msvcrt/libs/x86/win11-23h2-pro_msdn-iso_x64/SysWOW64/: msvcrt.def  ntdll.def
rsc/: crypt32.def  np_clang_goodies.rc
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_8.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+38 more)
src/: _win32_main.c  debug.h  platform.h  text.c  text.h  version.h
src/arguments/: arguments.c  arguments.h  errors.h  flags.h  help.c  help.h  macros.h  structs.h  types.h
src/hash/crc32/: crc32.c  crc32.h
src/hashmaps/: structs.h  utils.c  utils.h
src/hashmaps/chained/: hashmap.c  hashmap.h  structs.h
src/hashmaps/open/: TODO.txt
src/ini/: errors.h  ini.c  ini.h  macros.h  notes.md  structs.h
src/lists/: commons.c  commons.h  structs.h
src/lists/double/: dllist.c  dllist.h  structs.h
src/lists/simple/: sllist.c  sllist.h
src/lists/single/: sllist.c  sllist.h  structs.h
src/uuid/: structs.h  uuid.c  uuid.h  uuid4.c  uuid4.h
tests/: assert.h  memutils.c  memutils.h
tests/arguments/: test_args_default_option.c  test_args_parsing_basic.c  test_args_required_children_option.c  test_args_required_option.c  test_options.c  test_verb.c  test_verb_registration.c
tests/hashmap_chained/: test_hashmap_chained_add_get.c  test_hashmap_chained_creation.c  test_hashmap_chained_deletion.c
tests/ini/: test_ini_primitives.c  test_ini_registration.c
tests/lists/: test_dllist_insertion.c  test_dllist_node_navigation.c  test_dllist_removal.c  test_llist_default_node_size.c  test_sllist_insertion.c  test_sllist_node_navigation.c  test_sllist_removal.c
tests/misc/: test_platform.c  test_version.c
tests/text/: test_text_charToWChar.c  test_text_copy.c  test_text_copyLine.c  test_text_copyLineW.c  test_text_copyW.c  test_text_firstDifferentIndex.c  test_text_firstDifferentIndexW.c  test_text_isEmpty.c  test_text_isEmptyW.c  test_text_lastDifferentIndex.c  test_text_lastDifferentIndexW.c  test_text_nextSpaceIndex.c  test_text_nextSpaceIndexW.c  test_text_startsWith.c  test_text_startsWithW.c  test_text_trim.c  test_text_trimW.c
